@@ -7,6 +7,7 @@
  - Additional folder field for mail folder attribute "hasSubscribedSubfolders"
  - More reliable message attachment detection
  - Proper error codes in ParamContainer class
+ - Removed unused methods from OCLPermission class and its subclasses
 
 * 2007-08-09 - marcus.klein@open-xchange.com
 
